source/components/code/style.scss
@use "../../sass/mixin/tokens";

$_: "c-code";

@include tokens.create($_, getComponentTokens($_), ('border' : '1px solid ' + tokens.get($_, "color--surface-border")));

.#{$_} {
    background-color: tokens.get($_, "color--surface-alt");
    border: tokens.get($_, "border");
    border-radius: tokens.use($_, "border-radius", 1.5);
    corner-shape: tokens.get($_, "corner-shape");
    overflow: hidden;
    position: relative;

    pre[class*="language-"],
    code[class*="language-"] {
        font-family: tokens.get($_, "font-family-code");
    }

    .code-toolbar {
        overflow: auto;
        background-color: tokens.get($_, "color--surface-alt");

        >pre[class*="language-"] {
            margin: 0;
            padding: tokens.use($_, "space", 3);
            background: transparent;
            border: 0;
        }

        >.toolbar {
            top: tokens.use($_, "space", 1);
            right: tokens.use($_, "space", 1);

        }
    }

    &__pre {
        font-family: tokens.get($_, "font-family-code");
        margin: 0;
    }

    &__output {
        display: block;
    }
}

